--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_redux: ^0.10.0
   sqflite: ^2.0.2
   path: ^1.8.0
+  toggle_switch: ^2.0.1
 
 dev_dependencies:
   flutter_test:
